src/only_re2c/test6_scan_file/scan_file.c
/* Generated by re2c 2.0.3 on Sun Jan 10 00:36:01 2021 */
#line 1 "scan_file.re"
//inspired from : https://www.codeproject.com/Articles/1035799/Generating-a-High-Speed-Parser-Part-re-c
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

enum token_type {
  END_TOKEN,
  RETURN, NAME,
  STRING_LITERAL,
  INT_LITERAL,
  INT_TYPE,
  SEMICOLON=';',
  EQUAL='=',
  LPAREN='(',
  RPAREN=')',
  LBRACE='{',
  RBRACE='}'
};

struct scanner_state {
  const char *cursor, *marker, *begin, *end, *lexeme;
  enum token_type token;
  char tokenvalue[255]; // no more than 255 characters
  int line_number,column_position;
};

struct scanner_state SCANNER_STATE;

void set_token_value(const char *token_type)
{
  sprintf( SCANNER_STATE.tokenvalue, "%s (\'%.*s\')",token_type, (int)(SCANNER_STATE.cursor - SCANNER_STATE.begin), SCANNER_STATE.begin );
}

void SCANNER(const char *the_text) {

    SCANNER_STATE.begin = the_text;
    SCANNER_STATE.end = the_text + strlen(the_text);
    SCANNER_STATE.cursor = the_text;
    SCANNER_STATE.lexeme = the_text;
    SCANNER_STATE.line_number = 1;
    SCANNER_STATE.column_position = 1;
    
    #line 57 "scan_file.re"


  // Infinite loop
  for (;;) {
loop:
    if (SCANNER_STATE.cursor >= SCANNER_STATE.end) {
        SCANNER_STATE.token = END_TOKEN; goto end;
    }
    SCANNER_STATE.begin = SCANNER_STATE.cursor;

    
#line 58 "scan_file.c"
{
	char yych;
	yych = *SCANNER_STATE.cursor;
	switch (yych) {
	case 0x00:
	case '\n':	goto yy2;
	case '\t':
	case '\v':
	case '\f':
	case ' ':	goto yy6;
	case '\r':	goto yy9;
	case '"':	goto yy10;
	case '(':	goto yy11;
	case ')':	goto yy13;
	case '/':	goto yy15;
	case '0':	goto yy16;
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy18;
	case ';':	goto yy20;
	case '=':	goto yy22;
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy24;
	case 'i':	goto yy27;
	case 'r':	goto yy28;
	case '{':	goto yy29;
	case '}':	goto yy31;
	default:	goto yy4;
	}
yy2:
	++SCANNER_STATE.cursor;
#line 85 "scan_file.re"
	{ SCANNER_STATE.lexeme = SCANNER_STATE.cursor; SCANNER_STATE.line_number++; goto loop; }
#line 147 "scan_file.c"
yy4:
	++SCANNER_STATE.cursor;
yy5:
#line 87 "scan_file.re"
	{ printf("unexpected character: %c\n", *SCANNER_STATE.cursor); goto loop; }
#line 153 "scan_file.c"
yy6:
	yych = *++SCANNER_STATE.cursor;
	switch (yych) {
	case '\t':
	case '\v':
	case '\f':
	case ' ':	goto yy6;
	default:	goto yy8;
	}
yy8:
#line 79 "scan_file.re"
	{ goto loop; }
#line 166 "scan_file.c"
yy9:
	yych = *++SCANNER_STATE.cursor;
	switch (yych) {
	case '\n':	goto yy2;
	default:	goto yy5;
	}
yy10:
	yych = *++SCANNER_STATE.cursor;
	switch (yych) {
	case '"':	goto yy5;
	default:	goto yy33;
	}
yy11:
	++SCANNER_STATE.cursor;
#line 70 "scan_file.re"
	{ SCANNER_STATE.token = LPAREN; goto end;}
#line 183 "scan_file.c"
yy13:
	++SCANNER_STATE.cursor;
#line 71 "scan_file.re"
	{ SCANNER_STATE.token = RPAREN; goto end;}
#line 188 "scan_file.c"
yy15:
	yych = *++SCANNER_STATE.cursor;
	switch (yych) {
	case '*':	goto yy35;
	default:	goto yy5;
	}
yy16:
	yych = *(SCANNER_STATE.marker = ++SCANNER_STATE.cursor);
	switch (yych) {
	case 'X':
	case 'x':	goto yy39;
	default:	goto yy19;
	}
yy17:
#line 82 "scan_file.re"
	{ SCANNER_STATE.token=(INT_LITERAL); goto end;}
#line 205 "scan_file.c"
yy18:
	yych = *++SCANNER_STATE.cursor;
yy19:
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy18;
	case 'L':
	case 'U':
	case 'l':
	case 'u':	goto yy37;
	default:	goto yy17;
	}
yy20:
	++SCANNER_STATE.cursor;
#line 74 "scan_file.re"
	{ SCANNER_STATE.token = SEMICOLON; goto end;}
#line 230 "scan_file.c"
yy22:
	++SCANNER_STATE.cursor;
#line 69 "scan_file.re"
	{ SCANNER_STATE.token = EQUAL; goto end;}
#line 235 "scan_file.c"
yy24:
	yych = *++SCANNER_STATE.cursor;
yy25:
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy24;
	default:	goto yy26;
	}
yy26:
#line 78 "scan_file.re"
	{ SCANNER_STATE.token = NAME; goto end;}
#line 308 "scan_file.c"
yy27:
	yych = *++SCANNER_STATE.cursor;
	switch (yych) {
	case 'n':	goto yy41;
	default:	goto yy25;
	}
yy28:
	yych = *++SCANNER_STATE.cursor;
	switch (yych) {
	case 'e':	goto yy42;
	default:	goto yy25;
	}
yy29:
	++SCANNER_STATE.cursor;
#line 72 "scan_file.re"
	{ SCANNER_STATE.token = LBRACE; goto end;}
#line 325 "scan_file.c"
yy31:
	++SCANNER_STATE.cursor;
#line 73 "scan_file.re"
	{ SCANNER_STATE.token = RBRACE; goto end;}
#line 330 "scan_file.c"
yy33:
	yych = *++SCANNER_STATE.cursor;
	switch (yych) {
	case '"':	goto yy43;
	default:	goto yy33;
	}
yy35:
	++SCANNER_STATE.cursor;
#line 68 "scan_file.re"
	{ goto comment; }
#line 341 "scan_file.c"
yy37:
	yych = *++SCANNER_STATE.cursor;
	switch (yych) {
	case 'L':
	case 'U':
	case 'l':
	case 'u':	goto yy37;
	default:	goto yy17;
	}
yy39:
	yych = *++SCANNER_STATE.cursor;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy45;
	default:	goto yy40;
	}
yy40:
	SCANNER_STATE.cursor = SCANNER_STATE.marker;
	goto yy17;
yy41:
	yych = *++SCANNER_STATE.cursor;
	switch (yych) {
	case 't':	goto yy47;
	default:	goto yy25;
	}
yy42:
	yych = *++SCANNER_STATE.cursor;
	switch (yych) {
	case 't':	goto yy49;
	default:	goto yy25;
	}
yy43:
	++SCANNER_STATE.cursor;
#line 77 "scan_file.re"
	{ SCANNER_STATE.token = STRING_LITERAL; goto end;}
#line 397 "scan_file.c"
yy45:
	yych = *++SCANNER_STATE.cursor;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy45;
	case 'L':
	case 'U':
	case 'l':
	case 'u':	goto yy37;
	default:	goto yy17;
	}
yy47:
	yych = *++SCANNER_STATE.cursor;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy24;
	default:	goto yy48;
	}
yy48:
#line 75 "scan_file.re"
	{ SCANNER_STATE.token = INT_TYPE; goto end;}
#line 500 "scan_file.c"
yy49:
	yych = *++SCANNER_STATE.cursor;
	switch (yych) {
	case 'u':	goto yy50;
	default:	goto yy25;
	}
yy50:
	yych = *++SCANNER_STATE.cursor;
	switch (yych) {
	case 'r':	goto yy51;
	default:	goto yy25;
	}
yy51:
	yych = *++SCANNER_STATE.cursor;
	switch (yych) {
	case 'n':	goto yy52;
	default:	goto yy25;
	}
yy52:
	yych = *++SCANNER_STATE.cursor;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy24;
	default:	goto yy53;
	}
yy53:
#line 76 "scan_file.re"
	{ SCANNER_STATE.token = RETURN; goto end;}
#line 590 "scan_file.c"
}
#line 88 "scan_file.re"


comment:
    
#line 597 "scan_file.c"
{
	char yych;
	yych = *SCANNER_STATE.cursor;
	switch (yych) {
	case '\n':	goto yy58;
	case '*':	goto yy60;
	default:	goto yy56;
	}
yy56:
	++SCANNER_STATE.cursor;
yy57:
#line 94 "scan_file.re"
	{ goto comment; }
#line 611 "scan_file.c"
yy58:
	++SCANNER_STATE.cursor;
#line 93 "scan_file.re"
	{ SCANNER_STATE.line_number++; goto comment; }
#line 616 "scan_file.c"
yy60:
	yych = *++SCANNER_STATE.cursor;
	switch (yych) {
	case '/':	goto yy61;
	default:	goto yy57;
	}
yy61:
	++SCANNER_STATE.cursor;
#line 92 "scan_file.re"
	{ goto loop; }
#line 627 "scan_file.c"
}
#line 95 "scan_file.re"


end:
    switch(SCANNER_STATE.token) {
        case SEMICOLON: printf("SEMICOLON"); break;
        case LPAREN: printf("LPAREN"); break;
        case RPAREN: printf("RPAREN"); break;
        case LBRACE: printf("LBRACE"); break;
        case RBRACE: printf("RBRACE"); break;
        case EQUAL: printf("EQUAL"); break;
        case INT_TYPE: printf("INT_TYPE"); break;
        case RETURN: printf("RETURN"); break;
        case NAME:
          set_token_value("NAME");
          printf("%s",SCANNER_STATE.tokenvalue);
          break;
        case STRING_LITERAL:
          set_token_value("STRING_LITERAL");
          printf("%s",SCANNER_STATE.tokenvalue);
          break;
        case INT_LITERAL:
          set_token_value("INT_LITERAL");
          printf("%s",SCANNER_STATE.tokenvalue);
          break;
        default:
          break;
    }
    SCANNER_STATE.column_position=(int)(SCANNER_STATE.begin - SCANNER_STATE.lexeme);
    printf(" found on Line %d at Position %d\n", SCANNER_STATE.line_number, SCANNER_STATE.column_position);
    
    // end inifinite loop when END_TOKEN
    if(END_TOKEN == SCANNER_STATE.token) break;
  }//for loop
}

//------------------------------
int main() {

  FILE *fp;
  long size;
  char *buff, *buff_end;
  size_t bytes;

  /* Open input file */
  fp = fopen("test.cscript", "r");
  if(fp == NULL) {
    fprintf(stderr, "Can't open test file\n");
    exit(-1);
  }

  /* Get file size */
  fseek(fp, 0, SEEK_END);
  size = ftell(fp);
  rewind(fp);

  /* Allocate buffer and read */
  buff = (char*) malloc(size * sizeof(char));
  bytes = fread(buff, 1, size, fp);  
  if (bytes != size) {
    fprintf(stderr, "Reading error"); 
    exit(-1);
  }
  
  buff_end = buff + strlen(buff);//(char*) ( ((char*)buff) + size );
  
  //printf(">>>> buff : '%s'\n",buff);
  //printf(">>>> buff_end : '%s'\n",buff_end);
  
  /* Start scanning */
  SCANNER(buff); //, buff_end);

  /* Close file and deallocate */
  fclose(fp);
  free(buff);
  return(0);
}
